--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.bgColor {
+  background-color: #FFC300;
+  min-height: 100vw;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.image-radius {
+  border-radius: 45px;
+  margin-left: 90px;
+}
+
+.divider {
+  border-left: 2px solid black;
+  height: 580px;
+  position: absolute;
+  left: 50%;
+  margin-left: -4px;
+  top: 130px
+}
+
+.left-title {
+  margin-top: 120px;
+  text-align: center;
+  font-style: italic;
+}
+
+.right-title {
+  margin-top: 120px;
+  text-align: center;
+  font-style: italic;
+}
+
+.btn-title{
+  font-size: 25px;
+  font-style: italic;
+}
+
+.btn-format{
+  font-size: 35px;
+  font-style: italic;
+  width: 300px;
+  background-color: black;
   color: white;
+  border-radius: 15px;
+  padding: 7px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-rounded {
+  color:white;
+  font-size: 22px;
+  font-style: italic;
+  border-radius: 40px;
+  padding: 5px;
+  width: 175px;
+  border-style: solid;
+  border-color: white .5;
 }
