--- a/src/App.css
+++ b/src/App.css
@@ -5,34 +5,33 @@
 
 .bgColor {
   background-color: #FFC300;
-  min-height: 100vw;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
 .image-radius {
-  border-radius: 45px;
-  margin-left: 90px;
+  border-radius: 45px;  
 }
 
 .divider {
   border-left: 2px solid black;
-  height: 580px;
-  position: absolute;
-  left: 50%;
-  margin-left: -4px;
-  top: 130px
+  height: 550px;  
+  margin-top: 175%;
+  left: 50%; 
+  align-items: center; 
+  
 }
 
 .left-title {
-  margin-top: 120px;
+  margin-top: 25%;
   text-align: center;
   font-style: italic;
 }
 
 .right-title {
-  margin-top: 120px;
+  margin-top: 25%;
   text-align: center;
-  font-style: italic;
+  font-style: italic;  
 }
 
 .btn-title{
@@ -50,13 +49,5 @@
   padding: 7px;
 }
 
-.btn-rounded {
-  color:white;
-  font-size: 22px;
-  font-style: italic;
-  border-radius: 40px;
-  padding: 5px;
-  width: 175px;
-  border-style: solid;
-  border-color: white .5;
-}
+
+
