--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .bgColor {
@@ -10,21 +11,19 @@
 }
 
 .image-radius {
-  border-radius: 45px;  
+  border-radius: 45px;
   height: 10%;
 }
 
 .divider {
   border-left: 2px solid black;
-  height: 550px;  
+  height: 550px;
   margin-top: 175%;
-  left: 50%; 
-  align-items: center; 
-  
+  left: 50%;
+  align-items: center;
 }
 
 .left-title {
-  margin-top: 25%;
   text-align: center;
   font-style: italic;
 }
@@ -32,29 +31,30 @@
 .right-title {
   margin-top: 25%;
   text-align: center;
-  font-style: italic;  
+  font-style: italic;
 }
 
-.btn-title{
+.btn-title {
   font-size: 25px;
   font-style: italic;
 }
 
-.btn-format{
-  font-size: 35px;
+.btn-format {
+  font-size: 25px !important;
   font-style: italic;
-  width: 300px;
+  width: 50%;
+  height: 65%;
   background-color: black;
   color: white;
   border-radius: 15px;
-  padding: 7px;
+  padding: 15PX;
 }
 
 .custom-height {
   max-height: 400px;
 }
 
-.small-btn-format{
+.small-btn-format {
   font-size: 35px;
   font-style: italic;
   width: 200px;
@@ -64,42 +64,22 @@
   padding: 7px;
 }
 
-.text-bold{
+.text-bold {
   font-weight: Bold;
   font-style: italic;
 }
 
-.border-radius{
+.border-radius {
   border-radius: 45px;
 }
 
-@media screen and (max-width: 376PX){
-  
-  .left-title {
-    margin-top: 5%;
-    font-size: 45px;
-    text-align: center;
-    font-style: italic;
-  }
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 200px;
+}
 
-  .mobile-image{
-    width: 90%;
-  }
-
-  .hide{
-    display: none;
-  }
-
-  .btn-format{
-    font-size: 30px;
-    font-style: italic;
-    width: 225px;
-    background-color: black;
-    color: white;
-    border-radius: 15px;
-    padding: 3px;
-  }
-
-  
-
+.test {
+  display: flex;
+  justify-content: center;
 }
