--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,11 @@ a:active {
   border-bottom: 2px solid black;
   display: flex;
   justify-content: space-around;
-  font-size: 18px;
 }
+
+.text-task{
+  font-size: 18px;
+  font-style: italic;
+} 
 
 
