--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   min-height: 100vh;
 }
 
+.bgColormodal {
+  background-color: #FFC300 !important; 
+}
+
 .image-radius {
   border-radius: 45px;
   height: 10%;
