--- a/src/App.css
+++ b/src/App.css
@@ -120,4 +120,24 @@ a:active {
   
 } 
 
+.failedEdit {
+  animation-name: shake;
+  animation-duration: 0.2s;
+  animation-iteration-count: 2;
+  animation-direction: alternate-reverse;
+  animation-timing-function: ease
+}
 
+@keyframes shake {
+  0% {
+      transform: translateX(2px);
+  } 25% {
+      transform: translateX(-4px);
+  } 50% {
+    transform: translateX(4px);
+  } 75% {
+  transform: translateX(-4px);
+  } 100% {
+    transform: translateX(2px);
+  }
+}
