--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,22 @@ a:active {
   animation-timing-function: ease
 }
 
+.text-task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text-task span {
+  margin-right: 5px;
+}
+
+.edit-icon,
+.trash-icon {
+  margin-left: 12px;
+}
+
+
 @keyframes shake {
   0% {
       transform: translateX(2px);
