--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,9 @@ navbar-toggler-icon{
   background-color: red !important;
 }
 
+:root {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='yellow ' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
 
 
 
